# Jyogi_Navi

./: .coderabbit.yaml  .gitignore  AGENTS.md  README.md  lefthook.yml  package.json  pnpm-lock.yaml  turbo.json
.github/: pull_request_template.md
apps/api/: .env.example  .gitignore  Dockerfile  Makefile  config.py  main.py  openapi.json  package.json  pyproject.toml
apps/api/db/: __init__.py  models.py  session.py
apps/api/middleware/: request_id.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_create_sessions_and_usage_logs.py  002_create_faq_embeddings.py  002_create_feedbacks.py  003_create_feedbacks.py  004_create_users.py
apps/api/models/: feedback.py  session.py
apps/api/routers/: admin.py  auth.py  chat.py  consent.py  feedback.py  health.py
apps/api/schemas/: admin.py  auth.py  feedback.py  session.py
apps/api/scripts/: export_openapi.py  gen_secret_payloads.py
apps/api/services/: dify_client.py  discord_auth.py  feedback_store.py  log_store.py  pii_mask.py  rate_limit.py  stats.py
apps/api/tests/: conftest.py
apps/api/tests/integration/api/: test_chat.py
apps/api/tests/unit/chat/: test_chat_router.py
apps/api/tests/unit/feedback/: test_feedback_router.py  test_save_feedback.py
apps/api/tests/unit/log_store/: test_save_usage_log.py
docs/: 00_onboarding.md  01_feature-list.md  02_tech-stack.md  03_screen-flow.md  04_permission-design.md  05_erd.md  06_directory.md  07_infrastructure.md  08_logging.md  09_schedule_and_issues.md  10_mastra-test.md  11_mastra-poc-result.md  iac.md  schema-driven.md  振り返り.md
(+74 files in other folders)
